# stp-pho-solver

./: .gitignore  CMakeLists.txt  FindCplex.cmake  MaxPDBHeuristic.h  build.sh  connectedness6-6.txt  connectedness6-top81.txt  connectedness7-top.txt  connectedness7-top9.txt  execute.sh  main.cpp  opho-con6-6-100.txt  opho-con6-7-100.txt  opho-con6-7-1000.txt  opho-con6-7.txt  opho.txt  opho2.txt  opho3.txt  opho_00_6.txt  opho_01_100.txt  opho_01_6.txt  opho_01_78.txt  opho_01_78_hand.txt  opho_01_78_hand2.txt  opho_01_78_hand4.txt  test
.cmake/api/v1/reply/: cache-v2-c7f9ef084135dd968c94.json  cmakeFiles-v1-72e2d6f75b83f24493fd.json  codemodel-v2-865ab3deb97c0bed3c2a.json  index-2024-04-28T18-37-55-0791.json  target-cplex-solver-Debug-8362822259a701c6ee15.json  target-stp_pdb_generator-Debug-f9ed476d36d4557a8209.json  target-stp_pho_solver-Debug-4efc1aec63380909b209.json  toolchains-v1-268b81be12f3e1dc4fea.json
PhO/: MaxPDBHeuristic.h  MyTreePermutationPDB.cpp  MyTreePermutationPDB.h  cplexSolver.cpp  pdb-generator.h  pho-solver.cpp  pho-solver.h
experiments/: 0-PDB-Stripes.py  1-PDB-RowCol.py  2-PDB-WideStripes.py  3-PDB-Checkers.py  A-SOL-RowCol.py  B-SOL-WideStripes.py  CON-6-100.py  CON-7-100.py  CON-7-1000.py  CONPHO-6-6.py  CONPHO-6-7.py  EXP-Connectedness1.py  EXP-Connectedness2.py  EXP-Connectedness3.py  EXP-Connectedness4.py  EXP-HandmadeConnected.py  EXP-LargeAndSmall.py  EXP-SizeRatio.py  EXP-SizeRatio2.py  EXP0-1.py  EXP0.0.py  EXP0.1.0.py  EXP0.1.1.py  EXP0.1.2.py  EXP0.2.1.py  EXP0.2.10.py  EXP0.2.100.py  EXP0.2.78.1.py  EXP0.2.78.2.py  EXP0.2.78.3.py  EXP0.2.78.4.py  EXP0.2.py  EXP0.py  EXP1.1.py  EXP1.2.py  EXP1.py  EXP2-1.py  EXP2.1.py  EXP2.2.py  EXP2.3.1.py  (+45 more)
experiments/data/exp1/: static-experiment-properties
experiments/data/exp1-grid-steps/: exp1-02-start
experiments/data/exp1/runs-00001-00100/00001/: driver.err  run  static-properties
hog2/PDB/: Driver.cpp
hog2/environments/: GraphEnvironment.h  MNPuzzle.cpp  MNPuzzle.h  PermutationPuzzleEnvironment.h  STPInstances.cpp  STPInstances.h
hog2/generic/: BFS.h  IDAStar.h  IDAStar.h~
hog2/search/: PDBHeuristic.h  SearchEnvironment.h  TreePermutationPDB.h
hog2/simulation/: ReservationProvider.h  Unit.h  UnitGroup.h  UnitSimulation.h
hog2/utils/: MR1Permutation.cpp  MR1Permutation.h  Map.h  NBitArray.h
pho/: Cplextest.cpp  InstancesMaker.cpp  LPSolver.cpp  LPSolver.h  Max-pdb-solver.cpp  MaxPDBHeuristic.h  OPHO-Gen.cpp  PDB-generator.cpp  PDB-generator.h  PHO-solver.cpp  PHO-solver.h  PHOHeuristic.h  PHOSA-solver.cpp  PHOSA-solver.h  PHOSAHeuristic.h  PhOLPSolver.cpp  PhOLPSolver.h  SumHeuristic.h  cplexSolver.cpp  cplexSolver.h  cplextest.cpp  max-pdb-solver.cpp  max-pdb-solver.h  pdb-generator.cpp  pho-solver.cpp  pho-solver.h
test/: STPimages.py
